--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,51 @@
 .header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 10px;
 }
 
 .nav a {
-    display: flex;
-    flex-direction: column;
-    text-decoration: none;
-    margin: 10px;
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  margin: 10px;
 }
 
 .material-icons {
-    background: none;
-    border: none;
-    cursor: pointer;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+div.carousel-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #97533d;
+  color: #f2f0ee;
+}
+
+button {
+  color: #f2f0ee;
+  background-color: #a5b462;
+  text-shadow: 2px 2px 2px #705a56;
+  padding: 3%;
+  border-radius: 15px;
+}
+div.selected-image {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+div.doggyDetails {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-shadow: 2px 2px 2px #705a56;
+}
+
+h2.name {
+  text-shadow: 6px 6px 6px #705a56;
 }
