put details into a scrollbox to mitigate responsive sizing

--- a/src/styles/Profiles.css
+++ b/src/styles/Profiles.css
@@ -17,6 +17,7 @@
     height: 400px;
     width: 400px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 15%;
 }
 
 .carouselNav .material-icons {
@@ -33,8 +34,11 @@
     border-radius: 15%;
     margin: 10px;
     padding: 10px;
-    height: 100%;
+    height: 30%;
     width: 90%;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
   
 .details {
