--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 .header {
+  padding: 0%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 10px;
+  background-color: #a5b462;
+  border-bottom: 2px solid #705a56;
+  box-shadow: 0px, 0px, 3px, 0px;
 }
 
 .nav a {
@@ -29,6 +33,5 @@
 
 h1 {
   color: #f2f0ee;
-  background-color: #a5b462;
   padding: 5px;
 }
