--- a/src/styles/Favorites.css
+++ b/src/styles/Favorites.css
@@ -3,10 +3,7 @@
 }
 
 .favoritesItem {
-    background-color: #FFFFFF;
-    transform: translateX(-100px);
     width: 100%;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .favoritesItem ul {
@@ -14,9 +11,12 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     color: #000000;
-    padding: 10px;
+    font-size: 30px;
+    background-color: #FFFFFF;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    padding: 20px;
 }
 
 .favoritesItem img {
