--- a/src/styles/Profiles.css
+++ b/src/styles/Profiles.css
@@ -33,7 +33,7 @@
   margin-bottom: 10px;
 }
 
-.carouselNav button.material-icons :hover {
+.carouselNav .material-icons:hover {
   color: #a5b462;
 }
 
@@ -42,11 +42,7 @@
   border-radius: 10%;
   margin: 10px;
   padding: 10px;
-  /* height: 30%; */
   width: 400px;
-  /* overflow-y: scroll;
-  -ms-overflow-style: none;
-  scrollbar-width: none; */
 }
 
 .details {
