--- a/src/styles/Favorites.css
+++ b/src/styles/Favorites.css
@@ -1,5 +1,7 @@
 .favoritesContainer {
     margin: 10px;
+    color: #FFFFFF;
+    text-align: center;
 }
 
 .favoritesItem {
@@ -12,9 +14,9 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    color: #000000;
+    color: #FFFFFF;
     font-size: 30px;
-    background-color: #FFFFFF;
+    background-color: rgba(0, 0, 0, 0.4);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     padding: 20px;
 }
@@ -27,5 +29,5 @@
 }
 
 .favoritesItem .material-icons {
-    color: #000000;
+    color: #FFFFFF;
 }
