--- a/src/styles/LogInSignUp.css
+++ b/src/styles/LogInSignUp.css
@@ -1,29 +1,35 @@
 .loginContainer {
-    display: flex;
-    background-color: rgba(0, 0, 0, 0.4);
-    align-items: center;
-    flex-direction: row;
-    justify-content: center;
-    border-radius: 10%;
-    margin: 10% 35%;
-    padding: 30px;
-    width: 400px;
-    text-align: center;
-    color: white;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    font-size: larger;
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.4);
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 10%;
+  margin: 20% 15%;
+  padding: 30px;
+  width: 400px;
+  text-align: center;
+  color: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  font-size: larger;
+}
+
+.link {
+  color: #a5b462;
+}
+
+.button {
+  background-color:#a5b462;
+  border-color: #a5b462;
+  border-radius: 10%;
+  padding: 10px;
+  font-size: larger;
+}
+
+@media screen and (min-width: 768px) {
+
+  .loginContainer {
+    margin: 7% 39%;
   }
 
-  .link {
-    color: #a5b462;
-  }
-
-  .button {
-    background-color:#a5b462;
-    border-color: #a5b462;
-    border-radius: 10%;
-    padding: 10px;
-    font-size: larger;
-  }
-
-  
+}
